--- a/repuestos-whatsapp.html
+++ b/repuestos-whatsapp.html
@@ -37,9 +37,11 @@
     <h4 class="click">Haz click en el banner de la categría de repuesto que necesitas para tu vehículo</h4>
   </div>
   <div class="container-2">
-    <div class="box box-1">
-      <img class="frenos" src="./products/frenos.png" alt="frenos"> <a class="txt frenos-txt">Frenos</a>
-    </div>
+    <a href="http://kaufparts.com" target="_blank" rel="noopener noreferrer">
+      <div class="box box-1">
+        <img class="frenos" src="./products/frenos.png" alt="frenos"> <a class="txt frenos-txt">Frenos</a>
+      </div>
+    </a>
     <div class="box box-2">
       <img class="lubricantes" src="./products/aceites.png" alt="aceites"> <a class="txt lubricantes-txt">Lubricantes</a>
     </div>
@@ -69,7 +71,15 @@
   </div>
   <img class="fondo2" src="./assets/fondo-2.png" alt="Header">
     <div class="compra-rep">
-      <h2  class="compra-rep-txt">Compra tus repuestos <strong>vía WhatsApp</strong> <button class="wtspbutton2">ENVIAR MENSAJE <img class="wtspicon" src="./assets/whatsapp.png" alt="Whatsapp"></button></h2>
+      
+        <h2  class="compra-rep-txt">Compra tus repuestos <strong>vía WhatsApp</strong>
+          <a href="https://api.whatsapp.com/send?phone=56953683089&text=Hola%20equipo%20Kaufparts,%20me%20podr%C3%ADan%20ayudar%20con%20mi%20cotizaci%C3%B3n%20de%20repuestos%20por%20favor." target="_blank" rel="noopener noreferrer">
+            <button class="wtspbutton2">
+              ENVIAR MENSAJE <img class="wtspicon" src="./assets/whatsapp.png" alt="Whatsapp">
+            </button>
+          </a>
+        </h2>
+      
     </div>
 
     <footer class="footer" alt="Header">
