--- a/repuestos-whatsapp.html
+++ b/repuestos-whatsapp.html
@@ -37,14 +37,16 @@
     <h4 class="click">Haz click en el banner de la categría de repuesto que necesitas para tu vehículo</h4>
   </div>
   <div class="container-2">
-    <a href="http://kaufparts.com" target="_blank" rel="noopener noreferrer">
-      <div class="box box-1">
+    <a href="https://kaufparts.com/kauf/en/Repuestos/Frenos/c/C08" target="_blank" rel="noopener noreferrer">
+      <div class="box box-1" >
         <img class="frenos" src="./products/frenos.png" alt="frenos"> <a class="txt frenos-txt">Frenos</a>
       </div>
     </a>
-    <div class="box box-2">
-      <img class="lubricantes" src="./products/aceites.png" alt="aceites"> <a class="txt lubricantes-txt">Lubricantes</a>
-    </div>
+    <a href="http://kaufparts.com" target="_blank" rel="noopener noreferrer">
+      <div class="box box-2">
+        <img class="lubricantes" src="./products/aceites.png" alt="aceites"> <a class="txt lubricantes-txt">Lubricantes</a>
+      </div>
+    </a>
     <div class="box box-3">
       <img class="boutique" src="./products/Boutique.png" alt="Boutique"> <a class="txt boutique-txt">Boutique</a>
     </div>
