--- a/repuestos-whatsapp.html
+++ b/repuestos-whatsapp.html
@@ -42,34 +42,46 @@
         <img class="frenos" src="./products/frenos.png" alt="frenos"> <a class="txt frenos-txt">Frenos</a>
       </div>
     </a>
-    <a href="http://kaufparts.com" target="_blank" rel="noopener noreferrer">
+    <a href="https://kaufparts.com/kauf/en/Repuestos/Ofertas/Repuestos/Lubricantes/c/C15-SC01-SG06" target="_blank" rel="noopener noreferrer">
       <div class="box box-2">
         <img class="lubricantes" src="./products/aceites.png" alt="aceites"> <a class="txt lubricantes-txt">Lubricantes</a>
       </div>
     </a>
-    <div class="box box-3">
-      <img class="boutique" src="./products/Boutique.png" alt="Boutique"> <a class="txt boutique-txt">Boutique</a>
-    </div>
+    <a href="https://kaufparts.com/kauf/en/Boutique/c/C14" target="_blank" rel="noopener noreferrer">
+      <div class="box box-3">
+        <img class="boutique" src="./products/Boutique.png" alt="Boutique"> <a class="txt boutique-txt">Boutique</a>
+      </div>
+    </a>
   </div>
   <div class="container-3">
-    <div class="box box-4">
-      <img class="am-em" src="./products/ac.png" alt="ac"> <a class="txt am">Amortiguadores</a><br>
-      <a class="txt em">Embriagues</a>
-    </div>
-    <div class="box box-5">
-      <img class="filtros" src="./products/filtro.png" alt="filtro"> <a class="txt filtros-txt">Filtros</a>
-    </div>
-    <div class="box box-6">
-      <img class="accesorios" src="./products/accesorios.png" alt="accesorios"> <a class="txt accesorios-txt">Accesorios</a>
-    </div>
+    <a href="https://kaufparts.com/kauf/en/Repuestos/Transmisión/Embrague/c/C11-SC03" target="_blank" rel="noopener noreferrer">
+      <div class="box box-4">
+        <img class="am-em" src="./products/ac.png" alt="ac"> <a class="txt am">Amortiguadores</a><br>
+        <a class="txt em">Embriagues</a>
+      </div>
+    </a>
+    <a href="https://www.kaufparts.com/kauf/es/Repuestos/Mantenimiento/c/C12" target="_blank" rel="noopener noreferrer">
+      <div class="box box-5">
+        <img class="filtros" src="./products/filtro.png" alt="filtro"> <a class="txt filtros-txt">Filtros</a>
+      </div>
+    </a>
+    <a href="https://kaufparts.com/kauf/en/Repuestos/Ofertas/Repuestos/Accesorios/c/C15-SC01-SG01" target="_blank" rel="noopener noreferrer">
+      <div class="box box-6">
+        <img class="accesorios" src="./products/accesorios.png" alt="accesorios"> <a class="txt accesorios-txt">Accesorios</a>
+      </div>
+    </a>
   </div>
   <div class="container-4">
+    <a href="https://kaufparts.com/kauf/en/Repuestos/Ofertas/c/C15" target="_blank" rel="noopener noreferrer">
     <div class="box box-7">
       <img class="ofertas" src="./products/ofertas.png" alt="ofertas"> <a class="txt ofertas-txt">Ofertas</a>
     </div>
+  </a>
+  <a href="https://kaufparts.com/kauf/en/Repuestos/Generico/c/C13" target="_blank" rel="noopener noreferrer">
     <div class="box box-8">
       <img class="genericos" src="./products/generico.png" alt="generico"> <a class="txt genericos-txt">Genéricos</a>
     </div>
+  </a>
   </div>
   <img class="fondo2" src="./assets/fondo-2.png" alt="Header">
     <div class="compra-rep">
@@ -77,7 +89,7 @@
         <h2  class="compra-rep-txt">Compra tus repuestos <strong>vía WhatsApp</strong>
           <a href="https://api.whatsapp.com/send?phone=56953683089&text=Hola%20equipo%20Kaufparts,%20me%20podr%C3%ADan%20ayudar%20con%20mi%20cotizaci%C3%B3n%20de%20repuestos%20por%20favor." target="_blank" rel="noopener noreferrer">
             <button class="wtspbutton2">
-              ENVIAR MENSAJE <img class="wtspicon" src="./assets/whatsapp.png" alt="Whatsapp">
+              <strong>ENVIAR MENSAJE</strong> <img class="wtspicon" src="./assets/whatsapp.png" alt="Whatsapp">
             </button>
           </a>
         </h2>
