commit a por span

--- a/repuestos-whatsapp.html
+++ b/repuestos-whatsapp.html
@@ -39,47 +39,47 @@
   <div class="container-2">
     <a href="https://kaufparts.com/kauf/en/Repuestos/Frenos/c/C08" target="_blank" rel="noopener noreferrer">
       <div class="box box-1" >
-        <img class="frenos" src="./products/frenos.png" alt="frenos"> <a class="txt frenos-txt">Frenos</a>
+        <img class="frenos" src="./products/frenos.png" alt="frenos"> <span class="txt frenos-txt">Frenos</span>
       </div>
     </a>
     <a href="https://kaufparts.com/kauf/en/Repuestos/Ofertas/Repuestos/Lubricantes/c/C15-SC01-SG06" target="_blank" rel="noopener noreferrer">
       <div class="box box-2">
-        <img class="lubricantes" src="./products/aceites.png" alt="aceites"> <a class="txt lubricantes-txt">Lubricantes</a>
+        <img class="lubricantes" src="./products/aceites.png" alt="aceites"> <span class="txt lubricantes-txt">Lubricantes</span>
       </div>
     </a>
     <a href="https://kaufparts.com/kauf/en/Boutique/c/C14" target="_blank" rel="noopener noreferrer">
       <div class="box box-3">
-        <img class="boutique" src="./products/Boutique.png" alt="Boutique"> <a class="txt boutique-txt">Boutique</a>
+        <img class="boutique" src="./products/Boutique.png" alt="Boutique"> <span class="txt boutique-txt">Boutique</span>
       </div>
     </a>
   </div>
   <div class="container-3">
     <a href="https://kaufparts.com/kauf/en/Repuestos/Transmisión/Embrague/c/C11-SC03" target="_blank" rel="noopener noreferrer">
       <div class="box box-4">
-        <img class="am-em" src="./products/ac.png" alt="ac"> <a class="txt am">Amortiguadores</a><br>
+        <img class="am-em" src="./products/ac.png" alt="ac"> <span class="txt am">Amortiguadores</span><br>
         <a class="txt em">Embriagues</a>
       </div>
     </a>
     <a href="https://www.kaufparts.com/kauf/es/Repuestos/Mantenimiento/c/C12" target="_blank" rel="noopener noreferrer">
       <div class="box box-5">
-        <img class="filtros" src="./products/filtro.png" alt="filtro"> <a class="txt filtros-txt">Filtros</a>
+        <img class="filtros" src="./products/filtro.png" alt="filtro"> <span class="txt filtros-txt">Filtros</span>
       </div>
     </a>
     <a href="https://kaufparts.com/kauf/en/Repuestos/Ofertas/Repuestos/Accesorios/c/C15-SC01-SG01" target="_blank" rel="noopener noreferrer">
       <div class="box box-6">
-        <img class="accesorios" src="./products/accesorios.png" alt="accesorios"> <a class="txt accesorios-txt">Accesorios</a>
+        <img class="accesorios" src="./products/accesorios.png" alt="accesorios"> <span class="txt accesorios-txt">Accesorios</span>
       </div>
     </a>
   </div>
   <div class="container-4">
     <a href="https://kaufparts.com/kauf/en/Repuestos/Ofertas/c/C15" target="_blank" rel="noopener noreferrer">
     <div class="box box-7">
-      <img class="ofertas" src="./products/ofertas.png" alt="ofertas"> <a class="txt ofertas-txt">Ofertas</a>
+      <img class="ofertas" src="./products/ofertas.png" alt="ofertas"> <span class="txt ofertas-txt">Ofertas</span>
     </div>
   </a>
   <a href="https://kaufparts.com/kauf/en/Repuestos/Generico/c/C13" target="_blank" rel="noopener noreferrer">
     <div class="box box-8">
-      <img class="genericos" src="./products/generico.png" alt="generico"> <a class="txt genericos-txt">Genéricos</a>
+      <img class="genericos" src="./products/generico.png" alt="generico"> <span class="txt genericos-txt">Genéricos</span>
     </div>
   </a>
   </div>
